--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\TEC\\.netbeans\\7.1\\build.properties
+user.properties.file=C:\\Users\\jc\\.netbeans\\7.1.1\\build.properties
